# SortingLibC

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.c
headers/: bubble_sort.c  quick_sort.c  sorting.h
